--- a/MALID/Data-Collector/app/src/main/res/layout/activity_login.xml
+++ b/MALID/Data-Collector/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/back">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +18,9 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="u-Health-Care-System"
-            android:textSize="30sp" />
+            android:textColor="#c8ff5e00"
+            android:textSize="30sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <LinearLayout
@@ -68,14 +71,14 @@
                 android:id="@+id/btnSignIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="로그인"
+                android:text="Sign in"
                 android:layout_weight="1"
                 android:onClick="mOnClick"/>
             <Button
                 android:id="@+id/btnSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="회원가입"
+                android:text="Join"
                 android:layout_weight="1"
                 android:onClick="mOnClick"/>
         </LinearLayout>
