--- a/MALID/Data-Collector/app/src/main/res/layout/activity_root.xml
+++ b/MALID/Data-Collector/app/src/main/res/layout/activity_root.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.RootActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".Activities.RootActivity"
+android:background="@drawable/back"
+    >
 
-</android.support.constraint.ConstraintLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="u"
+            android:textSize="80sp"
+            android:textStyle="bold|italic"
+            android:textColor="#c8ff5e00"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Health"
+            android:textSize="80sp"
+            android:textStyle="bold|italic"
+            android:textColor="#c8ff5e00"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Care"
+            android:textSize="80sp"
+            android:textStyle="bold|italic"
+            android:textColor="#c8ff5e00"/>
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
