--- a/MALID/Data-Collector/app/src/main/res/layout/activity_main.xml
+++ b/MALID/Data-Collector/app/src/main/res/layout/activity_main.xml
@@ -165,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Prediction"
+            android:text="Prediction "
             android:textSize="20sp"
             android:textColor="#000000"/>
 
@@ -175,8 +175,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:autoText="true"
-            android:textSize="20sp"
-            android:textColor="#0000ff"/>
+            android:textColor="#0000ff"
+            android:textSize="20sp" />
     </LinearLayout>
 
 
@@ -252,7 +252,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="Time    "
+            android:text="Time"
             android:textColor="#000000"
             android:textSize="20sp" />
         <Chronometer
